# aoc2024

./: .gitignore  Cargo.toml  README.md  init.sh
benches/: bench.rs
src/: lib.rs
src/days/day01/: mod.rs
src/days/day02/: mod.rs
src/days/day03/: mod.rs
src/days/day04/: mod.rs
src/days/day05/: mod.rs
src/days/day06/: mod.rs
src/days/day07/: mod.rs
src/days/day08/: mod.rs
src/days/day09/: mod.rs
src/days/day10/: mod.rs
src/days/day11/: mod.rs
src/days/day12/: mod.rs
src/days/day13/: mod.rs
src/days/day14/: mod.rs
src/days/day15/: example4.txt  mod.rs
src/days/day16/: mod.rs
src/days/day17/: mod.rs
src/days/day18/: mod.rs  util.rs
src/days/day19/: mod.rs
src/days/day20/: mod.rs
src/days/day21/: mod.rs
src/days/day22/: mod.rs
src/days/day23/: mod.rs
src/days/day24/: mod.rs
src/days/day25/: mod.rs
