[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
memoize = "0.4.2"
nom = "7.1.3"
num-integer = "0.1.46"
paste = "1.0.15"
pathfinding = "4.11.0"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["blocking"] }

[[bench]]
name = "bench"
harness = false
